--- a/test-rt/data/sample.html
+++ b/test-rt/data/sample.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--This file is hand edited to chop off many inline script blocks-->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" data-placeholder-focus="false"><head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="HandheldFriendly" content="True">
